--- a/gb/nsc413_3.md
+++ b/gb/nsc413_3.md
@@ -1,4 +1,14 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/qgedzr297/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/qgedzr297/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san9658.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san9658.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san9658.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san9658.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san9658.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san9658.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san9658.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/qgedzr297/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qgedzr297/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/qgedzr297/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11786579.md#1" target="_blank">【翻墙必看】分析：中共对台湾大选的误判</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11786579.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/869934ae12ca8cb40525703e09bf72aa-150x120.jpg" align ="left"></a>大纪元每天为读者梳理翻墙必看的文章：
+
+1.【拍案惊奇】蔡英文连任！北京的三层误判
+2020台湾第15任总统及立委选举结束，蔡英文成功连任！三名总统候选人的得票率，截至我们发稿，分别是：蔡英文57.13%，得票超过817万，韩国瑜38.61%，得票至少552万，宋楚瑜4.3%，得票约60万。
+
+2.警告伊朗勿屠杀抗议人民 川普：全球都在看
+德黑兰.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 9:19 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/27/n11750385.md#1" target="_blank">中共在美国后院扮何角色？美将军揭内幕</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/19/12/27/n11750385.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1139326037-150x120.jpg" align ="left"></a>中共一直利用“一带一路”具有限制条款的投资倡议在全球扩张势力，且“一带一路”已让一些国家陷入债务困境。在美国后院的拉美，乃至南美国家，中共也开始在多方面进行渗透，引发美方警惕。美军指挥官最近曝光了中共将长臂伸入拉美和南美的四种途径。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 8:41 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11787227.md#1" target="_blank">美中签约后 三大因素或使中共承诺成空</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11787227.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/10/GettyImages-1142701434-150x120.jpg" align ="left"></a>美中第一阶段贸易协议将在未来几天签署，但有分析认为，签约后，中共承诺购买美国农产品的数额或将不会实现。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 7:14 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11787408.md#1" target="_blank">蔡英文胜选 法专家：国际社会应守护台湾民主</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11787408.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1024x768_20200112000067-150x120.jpg" align ="left"></a>1月11日，台湾总统大选开票，驻法代表处邀请法国学者、记者齐聚观看开票。对蔡英文总统胜出，法国智库学者马拉费说，台湾的民主给国际社会许多启发，全球民主国家有责任共同守护。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 5:09 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11787319.md#1" target="_blank">美国9个观选团访台 斯伯丁将军分享推文</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11787319.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/20200111PHO0018l-150x120.jpg" align ="left"></a>在2020年台湾总统大选中，美国派出9个观选团访台，其中包括美国空军退役准将斯伯丁（Robert Spalding）等专家学者，而斯伯丁也在推特上分享与此行相关的一些照片和推文。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 4:39 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11786768.md#1" target="_blank">中共稳经济拉开序幕 各地投资万亿搞基建</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11786768.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2013/10/090609180407100160-150x120.jpg" align ="left"></a>今年1月份，大陆武汉等省市已经拉开了大兴土木搞基建的序幕，据悉这是大陆今年稳经济增长的一部分。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 3:52 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11787039.md#1" target="_blank">韩粉称“若蔡英文得800万票请全台吃鸡排”</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11787039.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2001110958202699-1-150x120.jpg" align ="left"></a>在台湾总统大选投票之前，一名据信是国民党候选人韩国瑜的粉丝扬言，如果民进党候选人、现任中华民国总统蔡英文拿到800万票，他就请台湾2,300万人吃鸡排，不料蔡英文以817万票高票胜选，形同对他狠狠地打脸。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 2:43 PM							</td></tr>
@@ -23,15 +33,7 @@
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/11/n11785361.md#1" target="_blank">蔡英文连任 韩国瑜败选 中共官媒报异调</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/11/n11785361.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/abb02cb990a87bc2415eb7a8774aecc8-150x120.jpg" align ="left"></a>中华民国2020年总统大选中，对中共持强硬态度的民进党候选人蔡英文女士顺利当选、连任，而国民党总统候选人韩国瑜败选。对中共而言，它是如何报导这一尴尬局面的呢？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 12:38 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/11/n11785751.md#1" target="_blank">回应台湾大选 国台办重申九二共识一国两制</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/11/n11785751.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/PO_X5717-600x400-1-150x120.jpg" align ="left"></a>本届总统大选以历届最高票成功连任的蔡英文，在胜选感言中表示，今次的选举结果清楚表明“台湾人拒绝一国两制”。国台办晚间回应时重申坚持“九二共识”、“一国两制”和反对“台独”等一贯口径。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 12:37 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/11/n11785677.md#1" target="_blank">蓬佩奥贺蔡英文胜选：台湾再彰显民主力量</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/11/n11785677.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/0cad277f9c5032736334e345654c90e4-150x120.jpg" align ="left"></a>1月11日晚，台湾总统蔡英文以破800万的票数宣布大选获胜。美国国务卿蓬佩奥发表声明祝贺台湾总统蔡英文当选连任。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 12:18 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/11/n11783661.md#1" target="_blank">【拍案惊奇】台湾大选 分享5个忠告</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/11/n11783661.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15e8b19f86dcd6e8_ttl7daylaK___tn0110-150x120.jpg" align ="left"></a>我对台湾大选，第一个要说的就是，台湾的朋友，请你出去投票！这是我们作为关心台湾的局外人，你们最容易帮我们做到的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 12:11 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/11/n11785661.md#1" target="_blank">年轻人捍卫台湾民主 助蔡英文总统高票连任</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/11/n11785661.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/PO_X6244-1-150x120.jpg" align ="left"></a>1月11日，2020年台湾总统大选，蔡英文总统打败对手，当选中华民国第15届总统。年轻人对台湾主权及未来的忧心，以及支持蔡英文的两岸及经贸政策，帮助她连任成功。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 12:10 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/11/n11785604.md#1" target="_blank">立法院长：台湾护自由 选举结果向中共说不</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/11/n11785604.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/20191216PHO0056l-150x120.jpg" align ="left"></a>2020年台湾第15届总统、第10届立委选举开票今晚圆满完成。民进党总统候选人蔡英文以绝对优势获得连任。立法院长苏嘉全透过脸书发文表示，新民意顺利诞生，民主台湾继续向前行，同时向中共霸权主义说“不”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 11:52 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/11/n11785482.md#1" target="_blank">2020年总统立委败选 国民党主席请辞</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/11/n11785482.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1211x768_145132314348-150x120.jpg" align ="left"></a>2020年总统和立委选举中国民党大败。该党主席吴敦义今天表示，总统选举遇到挫折，区域立委席次也没能如愿，最终以失败告终。他将带头向中常会请辞。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 10:56 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/11/n11785068.md#1" target="_blank">证据不足检方撤诉 疫苗家长何方美获取保</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/11/n11785068.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/111-1-150x120.jpg" align ="left"></a>“疫苗宝宝之家”维权团体发起人何方美被控“寻衅滋事罪”一案，检方称因证据不足撤诉，法院裁定准许。1月10日晚，何方美获取保，与丈夫李新及两个年幼的孩子团聚。
-
-李新于当晚带着近一年没有见到妈妈的一双儿女，去河南省新乡看守所接何方美回家。李新对大纪元记者说，何方美的身体还好，精神也不错。他表示，要感谢给予大量关注的媒体和朋友们。
-
-李新说，何方美始终态.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 10:37 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11787628.md#1" target="_blank">赤字多又缺钱 中共地方当局紧缩开支</a><br></h3>中国统计局陆续公布各省市截至去年11月的收支情况，数据显示，不少富裕省市也出现了严重财政赤字。多个地方政府已下达命令，立即收缩开支。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 7:23 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11786992.md#1" target="_blank">中共外交部被点名“选人用人视野不宽”</a><br></h3>中共外交部被中共中纪委国家监委点名“选人用人视野不宽”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 4:48 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11786649.md#1" target="_blank">大陆“国家一级演员”受贿细节首次被曝光</a><br></h3>大陆知名男高音歌唱家、云南艺术学院原副院长王红星落马近三年后获刑。其受贿细节首次被曝光。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 1:46 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11789372.md#1" target="_blank">每日三退声明精选（2020/01/11）</a><br></h3>本人是来自北京的赵祁疆。在中学时代，因为受到了中共邪党的蛊惑，我成为了加入邪党先锋队青年团的积极分子。中学期间，我的母亲曾经因为记录中共对退伍军人杀鸡取卵，兔死狗烹的残暴行为而被中共官员截查并强制删除手机内容。在移民加拿大以后，我了解了中共邪党欺人瞒世、草芥人命的邪恶行径。在大学攻读经济学和社会学期间，通过教授的谆谆善诱和不懈帮助，我终于了解了中共邪党的本质.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 12:13 PM							</td></tr>
