--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,7 +30,7 @@
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/9/n11778295.md#1">伊朗导弹袭基地 美国国防部披露更多细节</a><br>
 <br><p><a href="https://github.com/xowzf2282/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
-<a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11790948.md#1">苏莱曼尼案震荡中共 让领导先走成国人心声</a><br>
+<a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11790948.md#1">苏莱曼尼案震动中共 让领导先走成国人心声</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/12/n11787878.md#1">年末岁首 中国人明真相远离中共</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11789882.md#1">中共官媒自曝美中签约后将出现问题</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791474.md#1">何清涟：2020台湾大选——救亡压倒一切</a><br>
