--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -22,9 +22,12 @@
 <tr><td><h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/10/n11782100.md#1" target="_blank">乾元：从广州地陷看中共城市管理体制</a><br></h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/10/n11782100.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/VCG111261803942-600x400-150x120.jpg" align ="left"></a>去年12月1日发生的广州地陷导致三人失踪事件，在民众和媒体的沸沸扬扬中逐渐降低了热度......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 4:58 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/10/n11781689.md#1" target="_blank">【名家专栏】对英国工党败选的思考</a><br></h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/10/n11781689.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1170379905-webcrop-1200x720-150x120.jpg" align ="left"></a>从成功中学习要比从失败中学习更容易一些，而在这两种情况下，我们的任务都是要找出哪种方法会有效，然后更多地利用这种有效的方法。但是当面对失败时，做到这一点是很困难的，尤其是当一个人已经很明显地失败了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 3:35 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/10/n11781128.md#1" target="_blank">袁斌：伊朗上演复仇戏 中共党媒失望</a><br></h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/10/n11781128.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NJ6BB-600x400-2-150x120.jpg" align ="left"></a>苏莱曼尼被美军斩首后，伊朗当局高调宣称正在讨论13套复仇剧本，扬言要对美国发动“严厉且决定性报复”。可就在中共党媒和五毛幸灾乐祸的等着看美国的笑话时，不想这出复仇大戏才揭幕便谢幕了，压根就没他们期盼的高潮。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 1:05 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/9/n11780728.md#1" target="_blank">王友群：天灾人祸不断伊朗报复美国难</a><br></h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/9/n11780728.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NJ9M1-600x400-2-150x120.jpg" align ="left"></a>在1月3日美国“斩首”伊朗第二号人物、中东恐怖大王苏莱曼尼之后，伊朗领导人相继发表讲话，表示要对美国进行严厉报复。
-
-中国古人讲，天时、地利、人和。伊朗对美国发动大规模军事报复，既不占天时，也没有地利，更不具人和。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 6:28 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/11/n11786210.md#1" target="_blank">郑纯清：台湾大选观感</a><br></h3>二零二零是何年？
+双十双十将身翻。
+百年红潮九九落，
+海峡漂红浪滔天。
+台湾大选尘埃定，
+青天白日扬征帆。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 5:36 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/11/n11785398.md#1" target="_blank">项云：老百姓看“打黑除恶”</a><br></h3>不管中共宣扬和实施“打黑除恶”什么意义，老百姓却完全不看好。听了三个百姓对“打黑除恶”看法，有的挺新颖。整理了一下他们看法叙述如下。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 10:04 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/11/n11785344.md#1" target="_blank">文静：“舆情引导”员把自己引向了险境</a><br></h3>共产党就是用各种手段维护他的统治，而它的这些手段都是把好人变成坏人。而坏人是没正义、没气节的，只要许以利益或恐吓，什么事都会去干，这样的人最便于中共的统治。希望你们每个人不要被它引诱成为坏人，帮其行恶，最后也成了罪人，把自己引向了危险的境地。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 9:35 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/11/n11783854.md#1" target="_blank">王赫：中共政局——三病缠身 死前丧智</a><br></h3>2019，中共是火上烤的一年，被烤得神志不清、惊慌失措、奄奄一息，政局全面恶化：草木皆兵，“向左转”浊浪拍岸，社会控制极端化；当局左支右绌，进退失措，几近丧失决策能力；强化“党领导一切”，刀光剑影之间，内斗呈现新态势，已末路不远。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 11:01 AM			</td></tr>
