--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/11/n11785361.md#1">蔡英文连任 韩国瑜败选 中共官媒报异调</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/8/n11777903.md#1">骆惠宁称揪心 郭文贵：骆绝对心狠手辣</a><br>
 <br><p><a href="https://github.com/xowzf2282/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791447.md#1">黄天辰：怀孕母牛下跪获救 那几亿胎儿何在？</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791261.md#1">袁斌：向往自由的大陆人为何为台湾大选干杯</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791129.md#1">洪达：从国际笑话看中共造假</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791133.md#1">颜丹：台湾大选结束 中共气急败坏为哪般？</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/12/n11788643.md#1">王赫：习近平可识“桃花源中人”？</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/12/n11788200.md#1">张林：从波斯帝国到让全世界嘲笑的当代伊朗</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/7/n11775339.md#1">夏林：惯偷的新年决心</a><br>
-<a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/12/n11787934.md#1">李靖宇：台湾大选 中共成蔡英文“最大助选员”</a><br>
 <br><p><a href="https://github.com/xowzf2282/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
