--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -11,6 +11,7 @@
 <br><p><a href="https://github.com/xowzf2282/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791447.md#1">黄天辰：怀孕母牛下跪获救 那几亿胎儿何在？</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791261.md#1">袁斌：向往自由的大陆人为何为台湾大选干杯</a><br>
+<a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791165.md#1">周晓辉：刘鹤赴美签协议 习近平为何突访缅甸？</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791129.md#1">洪达：从国际笑话看中共造假</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791133.md#1">颜丹：台湾大选结束 中共气急败坏为哪般？</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791025.md#1">王友群：蔡英文胜选获国际赞赏的五个原因</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/12/n11788664.md#1">东方觉：年终奖竟是“免裁券” “花式裁员”伤人心</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/12/n11788643.md#1">王赫：习近平可识“桃花源中人”？</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/12/n11788200.md#1">张林：从波斯帝国到让全世界嘲笑的当代伊朗</a><br>
-<a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/7/n11775339.md#1">夏林：惯偷的新年决心</a><br>
 <br><p><a href="https://github.com/xowzf2282/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
@@ -35,19 +35,19 @@
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/14/n11791643.md#1">贵州前副省长怕被查 四千瓶茅台酒倒马桶</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/14/n11791744.md#1">香港监警会300页报告 列警方多个问题</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11790948.md#1">苏莱曼尼案震动中共 让领导先走成国人心声</a><br>
+<a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/14/n11791616.md#1">美中谈判锋回路转 美方这两人起关键作用</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/12/n11787878.md#1">年末岁首 中国人明真相远离中共</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11789882.md#1">中共官媒自曝美中签约后将出现问题</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791474.md#1">何清涟：2020台湾大选——救亡压倒一切</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791346.md#1">中共高调“奔小康” 43斤女大学生因贫去世</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791322.md#1">吹捧导师崇高师母优美论文 上中国科学期刊</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791109.md#1">内幕：美军如何第一时间确认炸死苏莱曼尼</a><br>
-<a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791165.md#1">周晓辉：刘鹤赴美签协议 习近平为何突访缅甸？</a><br>
+<a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/14/n11792084.md#1">华日：不必北京同意 台湾经济可持续成长</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/14/n11791916.md#1">泰国现首例武汉肺炎 专家忧病毒扩散</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/14/n11791766.md#1">美团CEO删除百度APP 网民跟进删除</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/14/n11791730.md#1">佩洛西贺蔡英文连任 誓言美台共同捍卫人权</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/14/n11791743.md#1">朝井盖内扔鞭炮 甘肃一8岁男童被炸飞</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791100.md#1">北京昌平六百特警凌晨偷袭强拆 业主遭群殴</a><br>
-<a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/14/n11791616.md#1">美中谈判锋回路转 美方这两人起关键作用</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/14/n11791611.md#1">西宁路面塌陷 致6人死亡16人受伤</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/14/n11791555.md#1">大雾黄色预警 河北等地42条高速路封闭</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791387.md#1">专设房屋藏现金2亿多 赖小民自述贪腐细节</a><br>
