--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -1,5 +1,5 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/xowzf2282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xowzf2282/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/xowzf2282/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xowzf2282/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/xowzf2282/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xowzf2282/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/xowzf2282/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xowzf2282/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/xowzf2282/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xowzf2282/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/xowzf2282/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xowzf2282/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/xowzf2282/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xowzf2282/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/xowzf2282/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xowzf2282/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/xowzf2282/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/xowzf2282/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/14/n11791676.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/20200114666-320x200.jpg">【拍案惊奇】坠楼前场面被拍到 港男自杀7疑点</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
+<tr><td VALIGN=TOP width="355" height="1000"><a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791100.md#1"><img width="320" src="http://i.epochtimes.com/assets/uploads/2020/01/processed-2-320x200.jpeg">北京昌平六百特警凌晨偷袭强拆 业主遭群殴</a><br><h2><p><hr><strong>排行榜</strong></p></h2>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/11/n11786063.md#1">【拍案惊奇】蔡英文连任！北京的三层误判</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/11/n11783658.md#1">【更新】蔡英文破817万票 民进党立委过半</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
@@ -34,6 +34,7 @@
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/14/n11792072.md#1">美媒：川普7个月前授权有条件狙杀伊朗军头</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/14/n11791857.md#1">【翻墙必看】美中签协议 习访缅甸的背后</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/14/n11791812.md#1">伊朗导弹来袭 美军忆述如何做到毫发无损</a><br>
+<a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/14/n11791676.md#1">【拍案惊奇】坠楼前场面被拍到 港男自杀7疑点</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/14/n11791643.md#1">贵州前副省长怕被查 四千瓶茅台酒倒马桶</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/14/n11791744.md#1">香港监警会300页报告 列警方多个问题</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11790948.md#1">苏莱曼尼案震动中共 让领导先走成国人心声</a><br>
@@ -41,20 +42,19 @@
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/12/n11787878.md#1">年末岁首 中国人明真相远离中共</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11789882.md#1">中共官媒自曝美中签约后将出现问题</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791474.md#1">何清涟：2020台湾大选——救亡压倒一切</a><br>
-<a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791346.md#1">中共高调“奔小康” 43斤女大学生因贫去世</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/14/n11792015.md#1">程晓容：贵州女学生贫病去世 粉碎中共谎言</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/14/n11792084.md#1">美媒：不必北京同意 台湾经济可持续成长</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/14/n11791916.md#1">泰国现首例武汉肺炎 专家忧病毒扩散</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/14/n11791766.md#1">美团CEO删除百度APP 网民跟进删除</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/14/n11791730.md#1">佩洛西贺蔡英文连任 誓言美台共同捍卫人权</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/14/n11791743.md#1">朝井盖内扔鞭炮 甘肃一8岁男童被炸飞</a><br>
-<a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791100.md#1">北京昌平六百特警凌晨偷袭强拆 业主遭群殴</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/14/n11791611.md#1">西宁路面塌陷 致6人死亡16人受伤</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/14/n11791555.md#1">大雾黄色预警 河北等地42条高速路封闭</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791387.md#1">专设房屋藏现金2亿多 赖小民自述贪腐细节</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791381.md#1">大陆年轻人近90%是“负翁” 房子车子压顶</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791419.md#1">前白宫官员：初步协议已涉及301核心问题</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791209.md#1">传翟天临拟复出 汪涵：盗窃学术成果令人不齿</a><br>
+<a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791346.md#1">中共高调“奔小康” 43斤女大学生因贫去世</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791054.md#1">大陆名嘴朱丹：口误让我的主持生涯彻底毁灭</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791068.md#1">签协议前 美将中国移除汇率操纵国名单</a><br>
 <a href="https://github.com/xowzf2282/djy/blob/master/gb/20/1/13/n11791322.md#1">吹捧导师崇高师母优美论文 上中国科学期刊</a><br>
